# sblim-cmpi-dns

./: Makefile  README.md
src/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TroubleShooting  config.h.in  configure  configure.ac  provider-register.sh  sblim-cmpi-dns.spec  sblim-cmpi-dns.spec.in
src/man/: Makefile.am  Makefile.in  smt_dns_ra_support.conf.5  smt_dns_ra_support.conf.5.pre.in
src/model/: Linux_Dns.mof  Linux_Dns.registration  Linux_Dns_Profile.mof  Linux_Dns_Profile.registration
src/provider/: Makefile.am  Makefile.in
src/provider/CIM_ConcreteJob/: CIM_ConcreteJobExternal.cpp  CIM_ConcreteJobExternal.h  CIM_ConcreteJobInstance.cpp  CIM_ConcreteJobInstance.h  CIM_ConcreteJobInstanceName.cpp  CIM_ConcreteJobInstanceName.h  Makefile.am  Makefile.in
src/provider/Linux_DnsAddressMatchList/: CmpiLinux_DnsAddressMatchListProvider.cpp  CmpiLinux_DnsAddressMatchListProvider.h  Linux_DnsAddressMatchListDefaultImplementation.cpp  Linux_DnsAddressMatchListDefaultImplementation.h  Linux_DnsAddressMatchListExternal.cpp  Linux_DnsAddressMatchListExternal.h  Linux_DnsAddressMatchListFactory.cpp  Linux_DnsAddressMatchListFactory.h  Linux_DnsAddressMatchListInstance.cpp  Linux_DnsAddressMatchListInstance.h  Linux_DnsAddressMatchListInstanceName.cpp  Linux_DnsAddressMatchListInstanceName.h  Linux_DnsAddressMatchListInterface.h  Linux_DnsAddressMatchListManualInstance.cpp  Linux_DnsAddressMatchListManualInstance.h  Linux_DnsAddressMatchListRepositoryExternal.cpp  Linux_DnsAddressMatchListRepositoryExternal.h  Linux_DnsAddressMatchListRepositoryInstance.cpp  Linux_DnsAddressMatchListRepositoryInstance.h  Linux_DnsAddressMatchListResourceAccess.cpp  Linux_DnsAddressMatchListResourceAccess.h  Makefile.am  Makefile.in
src/provider/Linux_DnsAddressMatchListsForService/: CmpiLinux_DnsAddressMatchListsForServiceProvider.cpp  CmpiLinux_DnsAddressMatchListsForServiceProvider.h  Linux_DnsAddressMatchListsForServiceDefaultImplementation.cpp  Linux_DnsAddressMatchListsForServiceDefaultImplementation.h  Linux_DnsAddressMatchListsForServiceExternal.cpp  Linux_DnsAddressMatchListsForServiceExternal.h  Linux_DnsAddressMatchListsForServiceFactory.cpp  Linux_DnsAddressMatchListsForServiceFactory.h  Linux_DnsAddressMatchListsForServiceInstance.cpp  Linux_DnsAddressMatchListsForServiceInstance.h  Linux_DnsAddressMatchListsForServiceInstanceName.cpp  Linux_DnsAddressMatchListsForServiceInstanceName.h  Linux_DnsAddressMatchListsForServiceInterface.h  Linux_DnsAddressMatchListsForServiceManualInstance.cpp  Linux_DnsAddressMatchListsForServiceManualInstance.h  Linux_DnsAddressMatchListsForServiceRepositoryExternal.cpp  Linux_DnsAddressMatchListsForServiceRepositoryExternal.h  Linux_DnsAddressMatchListsForServiceRepositoryInstance.cpp  Linux_DnsAddressMatchListsForServiceRepositoryInstance.h  Linux_DnsAddressMatchListsForServiceResourceAccess.cpp  Linux_DnsAddressMatchListsForServiceResourceAccess.h  Makefile.am  Makefile.in
src/provider/Linux_DnsAllowNotifyForService/: CmpiLinux_DnsAllowNotifyForServiceProvider.cpp  CmpiLinux_DnsAllowNotifyForServiceProvider.h  Linux_DnsAllowNotifyForServiceDefaultImplementation.cpp  Linux_DnsAllowNotifyForServiceDefaultImplementation.h  Linux_DnsAllowNotifyForServiceExternal.cpp  Linux_DnsAllowNotifyForServiceExternal.h  Linux_DnsAllowNotifyForServiceFactory.cpp  Linux_DnsAllowNotifyForServiceFactory.h  Linux_DnsAllowNotifyForServiceInstance.cpp  Linux_DnsAllowNotifyForServiceInstance.h  Linux_DnsAllowNotifyForServiceInstanceName.cpp  Linux_DnsAllowNotifyForServiceInstanceName.h  Linux_DnsAllowNotifyForServiceInterface.h  Linux_DnsAllowNotifyForServiceManualInstance.cpp  Linux_DnsAllowNotifyForServiceManualInstance.h  Linux_DnsAllowNotifyForServiceRepositoryExternal.cpp  Linux_DnsAllowNotifyForServiceRepositoryExternal.h  Linux_DnsAllowNotifyForServiceRepositoryInstance.cpp  Linux_DnsAllowNotifyForServiceRepositoryInstance.h  Linux_DnsAllowNotifyForServiceResourceAccess.cpp  Linux_DnsAllowNotifyForServiceResourceAccess.h  Makefile.am  Makefile.in
src/provider/Linux_DnsAllowNotifyForZone/: CmpiLinux_DnsAllowNotifyForZoneProvider.cpp  CmpiLinux_DnsAllowNotifyForZoneProvider.h  Linux_DnsAllowNotifyForZoneDefaultImplementation.cpp  Linux_DnsAllowNotifyForZoneDefaultImplementation.h  Linux_DnsAllowNotifyForZoneExternal.cpp  Linux_DnsAllowNotifyForZoneExternal.h  Linux_DnsAllowNotifyForZoneFactory.cpp  Linux_DnsAllowNotifyForZoneFactory.h  Linux_DnsAllowNotifyForZoneInstance.cpp  Linux_DnsAllowNotifyForZoneInstance.h  Linux_DnsAllowNotifyForZoneInstanceName.cpp  Linux_DnsAllowNotifyForZoneInstanceName.h  Linux_DnsAllowNotifyForZoneInterface.h  Linux_DnsAllowNotifyForZoneManualInstance.cpp  Linux_DnsAllowNotifyForZoneManualInstance.h  Linux_DnsAllowNotifyForZoneRepositoryExternal.cpp  Linux_DnsAllowNotifyForZoneRepositoryExternal.h  Linux_DnsAllowNotifyForZoneRepositoryInstance.cpp  Linux_DnsAllowNotifyForZoneRepositoryInstance.h  Linux_DnsAllowNotifyForZoneResourceAccess.cpp  Linux_DnsAllowNotifyForZoneResourceAccess.h  Makefile.am  Makefile.in
src/provider/Linux_DnsAllowQueryForService/: CmpiLinux_DnsAllowQueryForServiceProvider.cpp  CmpiLinux_DnsAllowQueryForServiceProvider.h  Linux_DnsAllowQueryForServiceDefaultImplementation.cpp  Linux_DnsAllowQueryForServiceDefaultImplementation.h  Linux_DnsAllowQueryForServiceExternal.cpp  Linux_DnsAllowQueryForServiceExternal.h  Linux_DnsAllowQueryForServiceFactory.cpp  Makefile.am  Makefile.in  (+14 more)
src/resource-access/: Makefile.am  Makefile.in  conf.lexer.l  conf.parser.y  parser_support.c  parser_support.h  smt_dns_ra_cache.h  smt_dns_ra_rrhandle.c  smt_dns_ra_rrhandle.h  smt_dns_ra_scripts.h  smt_dns_ra_service.c  smt_dns_ra_service.h  smt_dns_ra_support.c  smt_dns_ra_support.conf.pre.in  smt_dns_ra_support.h  zone.lexer.l  zone.parser.y
src/test/: Makefile.am  Makefile.in  README.test  buffalo.example2.com.conf  cobra.example1.com.conf  elephant.example2.com.conf  named.conf  rhino.example1.com.conf  test-cmpi-dns.sh  testlocalhost.zone  testnamed.broadcast  testnamed.ca  testnamed.ip6.local  testnamed.zero
(+629 files in other folders)
